--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <title>ScriBBler</title>
     <!-- Place all CSS for header in this file -->
     <link href='css\header.css' rel='stylesheet' type='text/css'>
 
@@ -17,7 +17,15 @@
 
         <div class="header">
 
-        	<!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+            <!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+            <div id="website-logo">
+                <h1>ScriBBler</h1>
+                <p>Explore, Imagine, Create</p>
+            </div>
+            <div id="header-btns">
+                <button class="login-btn">Sign In</button>
+                <button class="login-btn">Sign Up</button>
+            </div>
 
         </div>
            
